# bevy_lorenz_system

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  Trunk.html  Trunk.toml  index.html
assets/shaders/: simple_color.wgsl  trail.wgsl
src/: gui.rs  main.rs  trails.rs
web/: bevy_lorenz_system-fc282548550e2bc5.js
