[package]
name = "bevy-cc"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.28.0"
bevy_panorbit_camera = { version = "0.21.1", features = ["bevy_egui"] }
iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui.git" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
