[package]
name = "bevy_lorenz_system"
version = "0.1.0"
authors = ["enellis"]
edition = "2021"
description = "Lorenz system rendered in Bevy"
license = "MIT OR Apache-2.0"

[dependencies]
# bevy = { version = "0.15.0", features = ["dynamic_linking"] }
bevy = "0.15.0"
bevy-inspector-egui = "0.28.0"
bevy_egui = "0.31.1"
bevy_panorbit_camera = { version = "0.21.1", features = ["bevy_egui"] }
bytemuck = "1.20.0"
iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui.git" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
